fixed flickering issue

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,3 +4,7 @@
     align-items: center;
     gap: 20px;
 }
+
+div, span {
+    transition: all .5s;
+}
