--- a/src/components/OrderBook/styles.module.scss
+++ b/src/components/OrderBook/styles.module.scss
@@ -3,8 +3,7 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    min-height: fit-content;
-    max-height: fit-content;
+    min-height: 31.25em;
     border-color: #263946;
 
     @media only screen and (min-width: 800px) {
